--- a/src/components/Question/styles.scss
+++ b/src/components/Question/styles.scss
@@ -1,5 +1,7 @@
 .root {
   text-align: left;
+  padding-left: 15px;
+  padding-right: 15px;
   padding-bottom: 2em;
   margin: auto;
   max-width: 800px;
