--- a/src/components/Result/styles.scss
+++ b/src/components/Result/styles.scss
@@ -1,6 +1,5 @@
 .root {
+  background-color: blue;
+  min-height: 50px;
   margin-bottom: 2em;
-  border: 1px solid rgb(255, 115, 0);
-  padding: 20px;
-  text-align: center;
 }
