--- a/src/components/Survey/styles.scss
+++ b/src/components/Survey/styles.scss
@@ -1,13 +1,13 @@
 .root {
   .container {
-    padding-left: 15px;
-    padding-right: 15px;
+    // padding-left: 15px;
+    // padding-right: 15px;
     padding-bottom: 2em;
     margin: auto;
     max-width: 850px;
   }
   .heading {
     text-align: left;
-    margin-bottom: 2em;
+    margin-bottom: 1.5em;
   }
 }
