--- a/src/components/Question/styles.scss
+++ b/src/components/Question/styles.scss
@@ -1,11 +1,18 @@
 .root {
   text-align: left;
-  padding-bottom: 2em;
+  // padding-bottom: 2em;
   margin: auto;
   max-width: 850px;
 
+  // p {
+  //   margin-bottom: 1em;
+  // }
+
   p {
-    margin-bottom: 1em;
+    font-size: 1.125rem;
+    line-height: 1.666666667;
+    margin-top: 0;
+    margin-bottom: 2.25rem;
   }
 
   $bg: #111;
