Even radio labels

--- a/src/components/Question/styles.scss
+++ b/src/components/Question/styles.scss
@@ -36,7 +36,7 @@
     border: solid $borderWidth $fg;
     border-radius: 0px;
     margin-right: 4px;
-    margin-bottom: 8px;
+    margin-bottom: 4px;
 
     -webkit-touch-callout: none; /* iOS Safari */
     -webkit-user-select: none; /* Safari */
@@ -44,8 +44,7 @@
     -moz-user-select: none; /* Old versions of Firefox */
     -ms-user-select: none; /* Internet Explorer/Edge */
     user-select: none; /* Non-prefixed version, currently supported by Chrome, Opera and Firefox */
-    // min-height: 100px;
-    // flex: 1 1;
+    min-width: 190px;
   }
 
   input[type="radio"]:checked + label {
