--- a/src/components/Survey/styles.scss
+++ b/src/components/Survey/styles.scss
@@ -31,7 +31,7 @@
 }
 
 .question-container {
-  padding: 20px 10px;
-  border: 1px solid black;
-  text-align: center;
+  // padding: 20px 10px;
+  // border: 1px solid black;
+  // text-align: center;
 }
