--- a/src/components/Result/styles.scss
+++ b/src/components/Result/styles.scss
@@ -1,6 +1,6 @@
 .root {
-  background-color: #eee;
-  min-height: 50px;
+  // background-color: #eee;
+  // min-height: 50px;
   text-align: left;
   // margin-bottom: 2em;
 }
