--- a/src/components/Question/styles.scss
+++ b/src/components/Question/styles.scss
@@ -62,6 +62,8 @@
     border-radius: 3px;
     letter-spacing: 1px;
     background-color: white;
+    box-shadow: 0px 3px 6px 0px rgba(0, 0, 0, 0.08),
+      0px 8px 16px 0px rgba(0, 0, 0, 0.1);
   }
 
   label:last-child {
