Putting in desktop styles

--- a/src/components/Question/styles.scss
+++ b/src/components/Question/styles.scss
@@ -24,9 +24,19 @@
     margin-bottom: 2.25rem;
   }
 
-  $bg: black;
-  $fg: lighten($bg, 20%);
-  $borderWidth: 1px;
+  // $bg: black;
+  // $fg: lighten($bg, 20%);
+  // $borderWidth: 1px;
+
+  .choices {
+    @include for-size(desktop-up) {
+      display: flex;
+      align-items: center;
+      flex-wrap: wrap;
+      justify-content: center;
+      align-content: space-between;
+    }
+  }
 
   input[type="radio"] {
     position: absolute;
@@ -38,7 +48,7 @@
     font-family: ABCSans, sans-serif;
     font-size: 12px;
     color: #096180;
-    display: inline-block;
+    display: block;
     cursor: pointer;
     font-weight: bold;
     padding: 11px 15px 10px;
@@ -56,9 +66,6 @@
     -ms-user-select: none; /* Internet Explorer/Edge */
     user-select: none; /* Non-prefixed version, currently supported by Chrome, Opera and Firefox */
 
-    flex: 1;
-    min-height: 55px;
-    display: flex;
     align-items: center;
     justify-content: center;
     border-radius: 3px;
@@ -69,11 +76,16 @@
 
     @include for-size(desktop-up) {
       // background-color: red;
+      display: flex;
+      flex: 1;
+      min-height: 55px;
     }
   }
 
   label:last-child {
-    margin-right: 0;
+    @include for-size(desktop-up) {
+      margin-right: 0;
+    }
   }
 
   input[type="radio"]:checked + label {
@@ -87,29 +99,29 @@
   //   margin-left: 4px
   // }
 
-  .radio-group {
-    border: solid $borderWidth $fg;
-    display: inline-block;
-    margin: 20px;
-    border-radius: 10px;
-    overflow: hidden;
-  }
+  // .radio-group {
+  //   border: solid 1px black;
+  //   display: inline-block;
+  //   margin: 20px;
+  //   border-radius: 10px;
+  //   overflow: hidden;
+  // }
 
   .title {
+    text-align: center;
     margin-bottom: 1em;
+    @include for-size(desktop-up) {
+      font-size: 24px;
+    }
   }
 
-  .choices {
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-content: space-between;
-  }
   .dont-know {
-    margin-left: 6px;
     border-color: #737373;
     color: black;
     background-color: #f2f2f2;
+
+    @include for-size(desktop-up) {
+      margin-left: 6px;
+    }
   }
 }
