--- a/src/components/Question/styles.scss
+++ b/src/components/Question/styles.scss
@@ -12,7 +12,7 @@
 
   h2 {
     font-family: ABCSerif, serif;
-    font-size: 16px;
+    font-size: 18px;
     // text-transform: uppercase;
     color: #4a4a4a;
   }
@@ -29,10 +29,15 @@
   // $borderWidth: 1px;
 
   .choices {
-    @include for-size(desktop-up) {
-      display: flex;
+    padding: 8px 0;
+    display: flex;
+    flex-direction: column;
+
+    @include for-size(tablet-portrait-up) {
+      // display: flex;
+      flex-direction: row;
       align-items: center;
-      flex-wrap: wrap;
+      flex-wrap: nowrap;
       justify-content: center;
       align-content: space-between;
     }
@@ -51,12 +56,11 @@
     display: block;
     cursor: pointer;
     font-weight: bold;
-    padding: 11px 15px 10px;
+    padding: 13px 15px 12px;
     text-transform: uppercase;
     border: solid 1px #0081ae;
     border-radius: 0px;
-    margin-right: 8px;
-    // margin-bottom: 4px;
+    margin-bottom: 12px;
     text-align: center;
 
     -webkit-touch-callout: none; /* iOS Safari */
@@ -74,18 +78,25 @@
     box-shadow: 0px 3px 6px 0px rgba(0, 0, 0, 0.08),
       0px 8px 16px 0px rgba(0, 0, 0, 0.1);
 
-    @include for-size(desktop-up) {
-      // background-color: red;
+    @include for-size(tablet-portrait-up) {
+      margin-left: 4px;
+      margin-right: 4px;
       display: flex;
       flex: 1;
-      min-height: 55px;
+      min-height: 60px;
     }
+
+    // @include for-size(desktop-up) {
+      
+    // }
   }
 
   label:last-child {
-    @include for-size(desktop-up) {
-      margin-right: 0;
-    }
+    // @include for-size(tablet-portrait-up) {
+    //   margin-right: 0;
+    // }
+    // @include for-size(desktop-up) {
+
   }
 
   input[type="radio"]:checked + label {
@@ -110,7 +121,7 @@
   .title {
     text-align: center;
     margin-bottom: 1em;
-    @include for-size(desktop-up) {
+    @include for-size(tablet-portrait-up) {
       font-size: 24px;
     }
   }
@@ -119,9 +130,11 @@
     border-color: #737373;
     color: black;
     background-color: #f2f2f2;
+    margin-block-start: 8px;
 
-    @include for-size(desktop-up) {
-      margin-left: 6px;
+    @include for-size(tablet-portrait-up) {
+      margin-top: 0;
+      margin-left: 8px;
     }
   }
 }
