--- a/src/components/Question/styles.scss
+++ b/src/components/Question/styles.scss
@@ -1,20 +1,15 @@
 @import "../../sass/breakpoints.scss";
 
 .root {
-  // text-align: left;
-  // padding-bottom: 2em;
   margin: auto;
   max-width: 850px;
-
-  // p {
-  //   margin-bottom: 1em;
-  // }
+  padding-top: 1em;
 
   h2 {
     font-family: ABCSerif, serif;
     font-size: 18px;
     // text-transform: uppercase;
-    color: #4a4a4a;
+    color: black;
   }
 
   p {
@@ -27,6 +22,15 @@
   // $bg: black;
   // $fg: lighten($bg, 20%);
   // $borderWidth: 1px;
+
+  .pre {
+    text-align: center;
+    text-transform: uppercase;
+    font-family: ABCSans, sans-serif;
+    font-weight: bold;
+    margin-bottom: 1em;
+    font-size: 14px;
+  }
 
   .choices {
     padding: 8px 0;
@@ -56,7 +60,7 @@
     display: block;
     cursor: pointer;
     font-weight: bold;
-    padding: 13px 15px 12px;
+    padding: 13px 10px 12px;
     text-transform: uppercase;
     border: solid 1px #0081ae;
     border-radius: 0px;
@@ -101,8 +105,14 @@
 
   input[type="radio"]:checked + label {
     color: white;
-    background: black;
-    border: 1px solid black;
+    
+    background-color: #0A749B;
+    border: 1px solid #0A749B;
+
+    @include for-size(tablet-portrait-up) {
+      background-color: black;
+      border-color: black;
+    }
   }
 
   // label + input[type="radio"] + label {
