--- a/src/components/AnimatedIcons/styles.scss
+++ b/src/components/AnimatedIcons/styles.scss
@@ -1,6 +1,10 @@
 .root {
+  overflow: hidden;
+  // height: 200px;
+
   svg {
     max-width: 200px;
+    
   }
   // border: 1px solid rgb(255, 115, 0);
   // padding: 20px;
