--- a/src/components/App/styles.scss
+++ b/src/components/App/styles.scss
@@ -1,11 +1,18 @@
 .root {
   text-align: center;
   font-family: ABCSans, sans-serif;
-  
+
   p {
     font-size: 1.125rem;
     line-height: 1.666666667;
     margin-top: 0;
     margin-bottom: 2.25rem;
+  }
+}
+
+:global {
+  // Artificially bump header animation up
+ .Header-content {
+    padding-top: 0 !important;
   }
 }
