--- a/src/components/Result/styles.scss
+++ b/src/components/Result/styles.scss
@@ -1,6 +1,7 @@
 .root {
   text-align: left;
   transition: all 1s ease-in-out;
+  color: #1B1A65;
 
   .key {
     font-family: ABCSans, sans-serif;
