--- a/src/components/Question/styles.scss
+++ b/src/components/Question/styles.scss
@@ -45,9 +45,9 @@
   }
 
   input[type="radio"] {
+    opacity: 0;
+    filter: alpha(opacity=0);
     position: absolute;
-    visibility: hidden;
-    display: none;
   }
 
   label {
