--- a/src/components/Result/styles.scss
+++ b/src/components/Result/styles.scss
@@ -2,6 +2,8 @@
   text-align: left;
   transition: all 1s ease-in-out;
   color: #1b1a65;
+  padding-left: 16px;
+  padding-right: 16px;
 
   .key {
     font-family: ABCSans, sans-serif;
