Styles and data

--- a/src/components/App/styles.scss
+++ b/src/components/App/styles.scss
@@ -37,4 +37,14 @@
     padding-top: 50px;
     min-height: 100px;
   }
+
+  .Main {
+    p {
+      color: rgb(27, 26, 101);
+    }
+
+    h1, h2 {
+      color: rgb(27, 26, 101);
+    }
+  }
 }
