--- a/src/components/Chart/styles.scss
+++ b/src/components/Chart/styles.scss
@@ -1,6 +1,6 @@
 .root {
-  border: 1px solid rgb(255, 115, 0);
-  padding: 20px;
-  text-align: center;
-  color: black;
+  h3 {
+    text-align: center;
+    color: #1B1A65;
+  }
 }
