--- a/src/components/Chart/styles.scss
+++ b/src/components/Chart/styles.scss
@@ -24,7 +24,7 @@
     justify-content: space-between;
     align-items: center;
     font-family: ABCSans, sans-serif;
-    margin-bottom: 4em;
+    margin-bottom: 3.5em;
 
     @include for-size(tablet-portrait-up) {
       align-items: flex-end;
@@ -44,9 +44,16 @@
   }
 
   .row {
-    display: flex;
-    justify-content: space-between;
+    // display: flex;
+    // justify-content: space-between;
     position: relative;
+
+    .layer {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      background-color: aqua;
+    }
 
     .dot-container {
       width: 76px;
