--- a/src/components/Chart/styles.scss
+++ b/src/components/Chart/styles.scss
@@ -43,6 +43,13 @@
     }
   }
 
+  .by-group {
+    text-align: left;
+    color: #1b1a65;
+    font-size: 14px;
+    font-weight: bold;
+  }
+
   .row {
     // display: flex;
     // justify-content: space-between;
@@ -56,18 +63,11 @@
       position: absolute;
       width: 100%;
       height: 100%;
-
-      .by-group {
-        color: #1b1a65;
-        font-size: 14px;
-        font-weight: bold;
-      }
     }
 
     .dot-container {
       width: 76px;
       text-align: center;
-
       display: flex;
       align-items: center;
 
@@ -77,6 +77,15 @@
         height: 12px;
         background-color: #e55e7a;
         border-radius: 50%;
+      }
+
+      .value {
+        margin: auto;
+        font-weight: 900;
+        font-size: 12px;
+        color: #a53b54;
+        // transform: translateY(-100%);
+        padding-left: 1px;
       }
     }
 
