--- a/src/components/Chart/styles.scss
+++ b/src/components/Chart/styles.scss
@@ -108,37 +108,49 @@
 
   .row {
     .dot-container {
-      width: 76px;
-      text-align: center;
-      display: flex;
-      align-items: center;
-
       .dot {
-        margin: auto;
-        width: 12px;
-        height: 12px;
         background-color: #237bc0;
-        border-radius: 50%;
       }
 
       .value {
-        margin: auto;
-        font-weight: 900;
-        font-size: 12px;
         color: #1064a1;
-        padding-left: 2px;
       }
     }
+  }
+}
 
-    .line {
-      position: absolute;
-      height: 4px;
-      width: 100%;
-      top: 50%;
-      left: 0;
-      transform: translateY(-50%);
-      background: rgba(255, 255, 255, 0.3);
-      z-index: -1;
+.orange {
+  .opinions {
+    color: #B52D1F;
+  }
+
+  .row {
+    .dot-container {
+      .dot {
+        background-color: #D4442E;
+      }
+      
+      .value {
+        color: #B52D1F;
+      }
+    }
+  }
+}
+
+.green {
+  .opinions {
+    color: #1A6B6B;
+  }
+
+  .row {
+    .dot-container {
+      .dot {
+        background-color: #199489;
+      }
+      
+      .value {
+        color: #1A6B6B;
+      }
     }
   }
 }
