--- a/src/components/App/styles.scss
+++ b/src/components/App/styles.scss
@@ -39,6 +39,7 @@
   }
 
   .Main {
+    z-index: -2;
     p {
       color: rgb(27, 26, 101);
     }
@@ -46,5 +47,9 @@
     h1, h2 {
       color: rgb(27, 26, 101) !important;
     }
+  }
+
+  .Header {
+    z-index: -2;
   }
 }
