--- a/src/components/App/styles.scss
+++ b/src/components/App/styles.scss
@@ -27,6 +27,9 @@
     height: 0;
     margin: 0;
     padding: 0;
+    position: absolute;
+    top: -9999px;
+    left: -9999px;
   }
 
   // .opacity-none ~ :not(.interactivefooter) {
