--- a/src/components/Chart/styles.scss
+++ b/src/components/Chart/styles.scss
@@ -51,8 +51,6 @@
   }
 
   .row {
-    // display: flex;
-    // justify-content: space-between;
     position: relative;
     display: block;
     min-height: 70px;
@@ -60,6 +58,12 @@
     .layer {
       display: flex;
       justify-content: space-between;
+      position: absolute;
+      width: 100%;
+      height: 100%;
+    }
+
+    .relative-layer {
       position: absolute;
       width: 100%;
       height: 100%;
@@ -87,6 +91,20 @@
         padding-left: 2px;
       }
     }
+
+    .annotation-container {
+      position: absolute;
+      background: rgba(255, 255, 255, 0.3);
+      width: 10px;
+      height: 10px;
+      top: 50%;
+      margin-top: -5px;
+      // border-top: 1px solid #A73953;
+      // border-left: 1px solid #A73953;
+      // border-right: 1px solid #A73953;
+    }
+
+    
 
     .line {
       position: absolute;
@@ -121,17 +139,17 @@
 
 .orange {
   .opinions {
-    color: #B52D1F;
+    color: #b52d1f;
   }
 
   .row {
     .dot-container {
       .dot {
-        background-color: #D4442E;
+        background-color: #d4442e;
       }
-      
+
       .value {
-        color: #B52D1F;
+        color: #b52d1f;
       }
     }
   }
@@ -139,7 +157,7 @@
 
 .green {
   .opinions {
-    color: #1A6B6B;
+    color: #1a6b6b;
   }
 
   .row {
@@ -147,9 +165,9 @@
       .dot {
         background-color: #199489;
       }
-      
+
       .value {
-        color: #1A6B6B;
+        color: #1a6b6b;
       }
     }
   }
