--- a/src/components/Chart/styles.scss
+++ b/src/components/Chart/styles.scss
@@ -48,6 +48,7 @@
     color: #1b1a65;
     font-size: 14px;
     font-weight: bold;
+    min-height: 30px;
   }
 
   .row {
@@ -94,7 +95,7 @@
 
     .annotation-container {
       position: absolute;
-      background: rgba(255, 255, 255, 0.3);
+      // background: rgba(255, 255, 255, 0.3);
       width: 10px;
       height: 10px;
       top: 50%;
