--- a/src/components/Chart/styles.scss
+++ b/src/components/Chart/styles.scss
@@ -48,7 +48,7 @@
     color: #1b1a65;
     font-size: 14px;
     font-weight: bold;
-    min-height: 30px;
+    // min-height: 30px;
   }
 
   .row {
