--- a/src/components/Chart/styles.scss
+++ b/src/components/Chart/styles.scss
@@ -109,6 +109,12 @@
           stroke: #a73953;
         }
       }
+
+      .annotation-value {
+        font-size: 11px;
+        font-weight: 900;
+        color: #a53B54;
+      }
     }
 
     .line {
