--- a/src/components/Chart/styles.scss
+++ b/src/components/Chart/styles.scss
@@ -114,6 +114,8 @@
         font-size: 11px;
         font-weight: 900;
         color: #a53B54;
+        position: relative;
+        top: 4px;
       }
     }
 
@@ -147,6 +149,10 @@
     }
 
     .annotation-container {
+      .annotation-value {
+        color: #1064A1;
+      }
+
       svg {
         g {
           stroke: #1064a1;
@@ -173,6 +179,10 @@
     }
 
     .annotation-container {
+      .annotation-value {
+        color: #b52d1f;
+      }
+
       svg {
         g {
           stroke: #b52d1f;
@@ -199,6 +209,10 @@
     }
 
     .annotation-container {
+      .annotation-value {
+        color: #1a6b6b;
+      }
+
       svg {
         g {
           stroke: #1a6b6b;
