--- a/src/components/Chart/styles.scss
+++ b/src/components/Chart/styles.scss
@@ -113,9 +113,10 @@
       .annotation-value {
         font-size: 11px;
         font-weight: 900;
-        color: #a53B54;
+        color: #a53b54;
         position: relative;
         top: 4px;
+        white-space: nowrap;
       }
     }
 
@@ -150,7 +151,7 @@
 
     .annotation-container {
       .annotation-value {
-        color: #1064A1;
+        color: #1064a1;
       }
 
       svg {
