--- a/src/components/Chart/styles.scss
+++ b/src/components/Chart/styles.scss
@@ -96,8 +96,8 @@
     .annotation-container {
       position: absolute;
       // background: rgba(255, 255, 255, 0.3);
-      width: 10px;
-      height: 10px;
+      // width: 10px;
+      // height: 10px;
       top: 50%;
       margin-top: -5px;
       // border-top: 1px solid #A73953;
@@ -111,11 +111,13 @@
       }
 
       .annotation-value {
+        display: block;
         font-size: 11px;
+        height: 16px;
         font-weight: 900;
         color: #a53b54;
         position: relative;
-        top: 4px;
+        // top: 4px;
         white-space: nowrap;
       }
     }
